お気に入り機能統計機能PWA対応を削除し、通知機能のみに簡素化

--- a/システム要件定義書.md
+++ b/システム要件定義書.md
@@ -48,7 +48,7 @@
 │                 │    │                 │    │                 │
 │ - 家庭菜園ガイド │    │ - API Routes    │    │ - posts         │
 │ - 掲示板機能     │    │ - Auth          │    │ - categories    │
-│ - 画像管理       │    │ - Storage       │    │ - favorites     │
+│ - 画像管理       │    │ - Storage       │    │ - notifications │
 │ - PWA対応       │    │ - Real-time     │    │ - notifications │
 └─────────────────┘    └─────────────────┘    └─────────────────┘
 ```
@@ -155,62 +155,21 @@
   - モーダルでの拡大表示
   - スライドショー機能
 
-### 3. お気に入り機能
+### 3. 通知機能
 
-#### 3.1 お気に入り登録
-- **機能**: 投稿をお気に入りに登録
-- **表示**: お気に入り一覧ページ
-- **管理**: お気に入りの追加・削除
-
-#### 3.2 お気に入り一覧
-- **表示**: 登録した投稿の一覧
-- **ソート**: 登録日順、カテゴリー別
-- **検索**: お気に入り内での検索
-
-### 4. 通知機能
-
-#### 4.1 サイト内通知
+#### 3.1 サイト内通知
 - **通知タイプ**:
   - 投稿への回答
-  - お気に入り登録
   - システム通知
 - **表示方法**:
   - 右上の通知アイコン
   - 通知一覧モーダル
   - 未読件数表示
 
-#### 4.2 匿名通知
+#### 3.2 匿名通知
 - **実装方法**: 名無しでの通知表示
 - **例**: "名無しさんから回答がありました"
 - **通知方法**: サイト内での通知表示のみ
-- **PWA対応**: プッシュ通知での新着投稿通知
-
-### 5. 統計機能
-
-#### 5.1 投稿統計
-- **表示項目**:
-  - 総投稿数
-  - カテゴリー別投稿数
-  - 今日の投稿数
-  - 参加者数（ユニーク投稿者）
-
-#### 5.2 人気カテゴリー
-- **表示**: 最も投稿が多いカテゴリー
-- **更新**: リアルタイム更新
-
-### 6. PWA対応
-
-#### 6.1 基本機能
-- **オフライン対応**: 基本的なコンテンツ表示
-- **ホーム画面追加**: アプリとしてインストール可能
-- **プッシュ通知**: 新着投稿の通知
-- **モバイルアプリ**: PWAとしてモバイル対応
-
-#### 6.2 モバイル最適化
-- **レスポンシブデザイン**: 全デバイス対応
-- **タッチ操作**: モバイルフレンドリーなUI
-- **パフォーマンス**: 高速読み込み
-- **画像最適化**: モバイル向け画像サイズ調整
 
 ## 🗄️ データベース設計
 
@@ -243,21 +202,11 @@ CREATE TABLE categories (
 );
 ```
 
-#### favorites（お気に入りテーブル）
-```sql
-CREATE TABLE favorites (
-  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
-  post_id UUID REFERENCES posts(id) ON DELETE CASCADE,
-  user_session_id VARCHAR(255) NOT NULL, -- 匿名ユーザー用
-  created_at TIMESTAMP WITH TIME ZONE DEFAULT NOW()
-);
-```
-
 #### notifications（通知テーブル）
 ```sql
 CREATE TABLE notifications (
   id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
-  type VARCHAR(50) NOT NULL, -- 'reply', 'favorite', 'system'
+  type VARCHAR(50) NOT NULL, -- 'reply', 'system'
   title VARCHAR(200) NOT NULL,
   message TEXT NOT NULL,
   post_id UUID REFERENCES posts(id),
@@ -316,16 +265,12 @@ app/
 │   ├── page.tsx
 │   └── [id]/
 │       └── page.tsx
-├── favorites/
-│   └── page.tsx
 ├── api/
 │   ├── posts/
 │   │   ├── route.ts
 │   │   └── [id]/
 │   │       └── route.ts
 │   ├── categories/
-│   │   └── route.ts
-│   ├── favorites/
 │   │   └── route.ts
 │   └── notifications/
 │       └── route.ts
@@ -338,7 +283,6 @@ interface AppState {
   // 投稿関連
   posts: Post[]
   categories: Category[]
-  favorites: string[]
   notifications: Notification[]
   
   // UI状態
@@ -352,7 +296,6 @@ interface AppState {
   createPost: (post: CreatePostData) => Promise<void>
   updatePost: (id: string, post: UpdatePostData) => Promise<void>
   deletePost: (id: string) => Promise<void>
-  toggleFavorite: (postId: string) => Promise<void>
 }
 ```
 
@@ -367,11 +310,6 @@ interface AppState {
 
 #### カテゴリー関連API
 - `GET /api/categories` - カテゴリー一覧取得
-
-#### お気に入り関連API
-- `GET /api/favorites` - お気に入り一覧取得
-- `POST /api/favorites` - お気に入り追加
-- `DELETE /api/favorites/[id]` - お気に入り削除
 
 #### 通知関連API
 - `GET /api/notifications` - 通知一覧取得
@@ -432,38 +370,6 @@ SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
 VERCEL_PROJECT_ID=your_project_id
 VERCEL_ORG_ID=your_org_id
 ```
-
-## 📱 PWA設定
-
-### 1. manifest.json
-```json
-{
-  "name": "家庭菜園ガイド・交流サイト",
-  "short_name": "家庭菜園",
-  "description": "初心者向け家庭菜園ガイドと交流サイト",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#4CAF50",
-  "icons": [
-    {
-      "src": "/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
-}
-```
-
-### 2. Service Worker
-- **キャッシュ戦略**: Network First
-- **オフライン対応**: 基本的なコンテンツ表示
-- **プッシュ通知**: 新着投稿通知
 
 ## 🔒 セキュリティ
 
@@ -539,14 +445,13 @@ VERCEL_ORG_ID=your_org_id
 - カテゴリー機能
 
 ### Week 7-8: 追加機能実装
-- お気に入り機能
 - 通知機能
-- 統計機能
+- 画像管理機能の強化
 
-### Week 9-10: PWA対応・テスト
-- PWA設定
+### Week 9-10: テスト・最適化
 - テスト実装
 - パフォーマンス最適化
+- セキュリティ強化
 
 ### Week 11-12: デプロイ・運用準備
 - 本番環境構築
