--- a/基本設計書.md
+++ b/基本設計書.md
@@ -23,26 +23,17 @@
 
 ```
 ┌─────────────────┐    ┌─────────────────┐    ┌─────────────────┐
-│   categories    │    │      posts      │    │    favorites    │
+│   categories    │    │      posts      │    │ notifications   │
 │                 │    │                 │    │                 │
 │ id (PK)         │◄───┤ category_id (FK)│    │ id (PK)         │
-│ name            │    │ id (PK)         │◄───┤ post_id (FK)    │
-│ emoji           │    │ name            │    │ user_session_id │
-│ color           │    │ title           │    │ created_at      │
-│ sort_order      │    │ message         │    └─────────────────┘
-│ created_at      │    │ images[]        │
-└─────────────────┘    │ created_at      │    ┌─────────────────┐
-                       │ updated_at      │    │ notifications   │
-                       └─────────────────┘    │                 │
-                                              │ id (PK)         │
-                                              │ type            │
-                                              │ title           │
-                                              │ message         │
-                                              │ post_id (FK)    │
-                                              │ user_session_id │
-                                              │ is_read         │
-                                              │ created_at      │
-                                              └─────────────────┘
+│ name            │    │ id (PK)         │    │ type            │
+│ emoji           │    │ title           │    │ title           │
+│ color           │    │ message         │    │ message         │
+│ sort_order      │    │ images[]        │    │ post_id (FK)    │
+│ created_at      │    │ created_at      │    │ user_session_id │
+└─────────────────┘    │ updated_at      │    │ is_read         │
+                       │ created_at      │    │ created_at      │
+                       └─────────────────┘    └─────────────────┘
 ```
 
 ### 2. テーブル定義
@@ -82,22 +73,7 @@ CREATE INDEX idx_posts_created_at ON posts(created_at DESC);
 CREATE INDEX idx_posts_name ON posts(name);
 ```
 
-#### 2.3 favorites（お気に入りテーブル）
-```sql
-CREATE TABLE favorites (
-  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
-  post_id UUID NOT NULL REFERENCES posts(id) ON DELETE CASCADE,
-  user_session_id VARCHAR(255) NOT NULL,
-  created_at TIMESTAMP WITH TIME ZONE DEFAULT NOW()
-);
-
--- インデックス
-CREATE INDEX idx_favorites_post_id ON favorites(post_id);
-CREATE INDEX idx_favorites_user_session ON favorites(user_session_id);
-CREATE UNIQUE INDEX idx_favorites_unique ON favorites(post_id, user_session_id);
-```
-
-#### 2.4 notifications（通知テーブル）
+#### 2.3 notifications（通知テーブル）
 ```sql
 CREATE TABLE notifications (
   id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
@@ -162,19 +138,10 @@ interface Post {
   updated_at: string;
 }
 
-// お気に入り型
-interface Favorite {
-  id: string;
-  post_id: string;
-  post?: Post;
-  user_session_id: string;
-  created_at: string;
-}
-
 // 通知型
 interface Notification {
   id: string;
-  type: 'reply' | 'favorite' | 'system';
+  type: 'reply' | 'system';
   title: string;
   message: string;
   post_id?: string;
